<resources>
    <string name="app_name">OperacionesMovil2018</string>
    <string name="titulo">Operaciones</string>
    <string name="numberone">Número</string>
    <string name="numbertwo">Número</string>
    <string name="sumar">Sumar</string>
    <string name="Limpiar">Limpiar</string>
    <string name="error_uno">Digite el número uno</string>
    <string name="error_dos">Digite el número dos</string>
    <string name="Operaciones">Seleccione operación</string>
    <string name="restar">Restar</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="dividir">Dividir</string>
    <string-array name="operaciones">
        <item>@string/sumar</item>
        <item>@string/restar</item>
        <item>@string/multiplicar</item>
        <item>@string/dividir</item>
    </string-array>
    <string name="error_tres">No se puede dividir entre cero</string>
</resources>
